--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,11 @@ python = "^3.11"
 beets = "^1.6.0"
 pylast = "^5.2.0"
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.0.0"
+flake8-bugbear = "^24.2.6"
+flake8-eradicate = "^1.5.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
